--- a/pangeo-catalogs.ipynb
+++ b/pangeo-catalogs.ipynb
@@ -48,6 +48,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "cell_style": "split",
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -103,6 +105,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -128,6 +131,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -142,6 +146,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -155,6 +160,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -288,6 +294,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -435,6 +442,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -779,14 +787,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-60360b8cadf3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"export.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"export.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "store = df_search.zstore.values[0]\n",
+    "mapper = fs.get_mapper(store)\n",
+    "xr.open_zarr(mapper)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Where to go from here?\n",
+    "The methods of cataloging data at Pangeo are changing rapidly!\n",
+    "\n",
+    "To keep up with this development, there are a variety of places to look:\n",
+    "- Discussion and development on Intake can be viewed on its [Github repository](https://github.com/intake/intake).\n",
+    "- Progress on ESMCol can be tracked at its [Github repository](https://github.com/NCAR/esm-collection-spec).\n",
+    "- The entirety of Pangeo's Intake and ESMCol catalogs can be viewed at [https://pangeo-data.github.io/pangeo-datastore/](https://pangeo-data.github.io/pangeo-datastore/).\n",
+    "- This presentation (and the interactive code blocks in it) can be viewed in a Binder at [https://github.com/charlesbluca/pangeo-catalogs](https://github.com/charlesbluca/pangeo-catalogs)."
+   ]
   }
  ],
  "metadata": {
